--- a/package.json
+++ b/package.json
@@ -2,17 +2,32 @@
   "name": "bitespeed.fluxkart-backend",
   "version": "1.0.0",
   "description": "This repository contains code for the backend of FluxKart.com, developed by Speedbite, exclusively to keep track of Dr. He who shall not be named's order history.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "tsx watch index.ts",
+    "build:watch": "tsc --watch",
+    "clean": "rm -rf dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "siddheshutd",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.0",
+    "cors": "^2.8.5",
+    "helmet": "^7.0.0",
+    "dotenv": "^16.0.0",
+    "@prisma/client": "^5.0.0"
+  },
   "devDependencies": {
-    "nodemon": "^3.0.0"
+    "nodemon": "^3.0.0",
+    "prisma": "^5.0.0",
+    "typescript": "^5.0.0",
+    "@types/node": "^20.0.0",
+    "tsx": "^4.0.0",
+    "ts-node": "^10.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
