--- a/package.json
+++ b/package.json
@@ -19,19 +19,22 @@
   "author": "siddheshutd",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.0",
+    "@prisma/client": "^5.0.0",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
     "dotenv": "^16.0.0",
-    "@prisma/client": "^5.0.0"
+    "express": "^4.18.0",
+    "helmet": "^7.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/helmet": "^0.0.48",
+    "@types/node": "^20.0.0",
     "nodemon": "^3.0.0",
     "prisma": "^5.0.0",
-    "typescript": "^5.0.0",
-    "@types/node": "^20.0.0",
+    "ts-node": "^10.0.0",
     "tsx": "^4.0.0",
-    "ts-node": "^10.0.0"
+    "typescript": "^5.0.0"
   },
   "engines": {
     "node": ">=16.0.0"
